--- a/blogproject/templates/blog/main.html
+++ b/blogproject/templates/blog/main.html
@@ -1,1 +1,10 @@
-<h1>이게 CI/CD의 힘인가?</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<main>
+    <h1>TODO: Main Content</h1>
+    <hr class="hr" />
+    <p>first, We need a main content including recent posts.</p>
+</main>
+{% endblock content %}
+
