--- a/blogproject/templates/blog/main.html
+++ b/blogproject/templates/blog/main.html
@@ -2,9 +2,21 @@
 
 {% block content %}
 <main>
-    <h1>TODO: Main Content</h1>
-    <hr class="hr" />
-    <p>first, We need a main content including recent posts.</p>
+    <h3>Recent Posts</h3>
+    <div class="list-group list-group-flush">
+    {% if posts %}
+    {% for post in posts %}
+        <a class="list-group-item" href="{% url 'blog:post' post.id %}">
+            <div class="d-flex w-100 justify-content-between">
+                <span>{{ post.title }}</span>
+                <small>{{ post.published_at }}</small>
+            </div>
+        </a>
+    {% endfor %}
+    {% else %}
+    <p>There are no recent posts...</p>
+    {% endif %}
+    </div>
 </main>
 {% endblock content %}
 
