--- a/blogproject/templates/sidebar.html
+++ b/blogproject/templates/sidebar.html
@@ -1,12 +1,11 @@
 {% load bootstrap_icons %}
 
-<aside class='sticky-top float-start d-none d-lg-block me-3' style="visibility: none;">
+<aside class='sticky-top float-start d-none d-lg-block me-5' style="visibility: none;">
     <img src="https://avatars.githubusercontent.com/u/102505374?v=4" width="110" alt="avatar" class='img-thumbnail rounded-circle my-3' />
     <h3>SukJu Hong</h3>
-    <p>중요한건 꺽이지 않는 마음</p>
-    <a class='m-0 link-secondary' href="mailto: ehensnfl@gmail.com">{% bs_icon 'envelope-at' %}email</a>
+    <a class='m-0 link-secondary text-decoration-none' href="mailto: ehensnfl@gmail.com">{% bs_icon 'envelope-at' %}email</a>
     <br/>
-    <a class='m-0 link-secondary' href="https://www.instagram.com/sukju0929/">{% bs_icon 'instagram' %}instagram</a>
+    <a class='m-0 link-secondary text-decoration-none' href="https://www.instagram.com/sukju0929/">{% bs_icon 'instagram' %}instagram</a>
     <br/>
-    <a class='m-0 link-secondary' href="https://github.com/hsukju00">{% bs_icon 'github' %}github</a>
+    <a class='m-0 link-secondary text-decoration-none' href="https://github.com/hsukju00">{% bs_icon 'github' %}github</a>
 </aside>
