--- a/blogproject/templates/blog/post_detail.html
+++ b/blogproject/templates/blog/post_detail.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
+{% load markdown_filter %}
 
 {% block content %}
-<h1>{{ post.title }}</h1>
-<h5>카테고리: {{ post.category.name }}</h5>
-<small>{{ post.published_at }}</small>
-<hr / >
-<p>{{ post.content }}</p>
+<div class="container-fluid">
+    <h1>{{ post.title }}</h1>
+    <h5>카테고리: {{ post.category.name }}</h5>
+    <small>{{ post.published_at }}</small>
+    <hr / >
+    <div>{{ post.content|to_markdown }}</div>
+</div>
 {% endblock content %}
